--- a/marcus_test/style.css
+++ b/marcus_test/style.css
@@ -17,9 +17,17 @@ body {
   /* display: none; */
 }
 
-#container {
+/* #container {
   width: 14rem;
   color: white;
   margin: 2rem auto;
   font-family: Arial, Helvetica, sans-serif;
+  z-index: 1;
+  position: relative;
 }
+#play {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+} */
