--- a/frontend_server/public/style.css
+++ b/frontend_server/public/style.css
@@ -1,11 +1,16 @@
 .container {
   padding-top: 60px;
 }
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
-  background-color: #24241a;
-  /* font-family: Georgia, Times, serif; */
-  color: white;
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  background-color: #36362d;
+  color: aliceblue;
 }
 
 h1 {
@@ -45,4 +50,15 @@ h2 {
 
 h3 {
   padding-top: 30px;
+}
+
+#overlay-content {
+  position: absolute;
+  left: calc(50% - 7rem);
+  /* Comment display none for dom overlay to work */
+  /* display: none; */
+}
+
+.rank-container {
+  background-color: red;
 }
