--- a/node_server/public/style.css
+++ b/node_server/public/style.css
@@ -62,3 +62,18 @@ h3 {
 .rank-container {
   background-color: red;
 }
+
+#measureSize {
+  position: fixed;
+  inset: 0;
+}
+canvas[data-engine*="three.js"] {
+  position: fixed;
+  inset: 0;
+  z-index: 0;
+}
+
+button {
+  position: relative;
+  z-index: 1;
+}
