--- a/node_server/public/style.css
+++ b/node_server/public/style.css
@@ -9,7 +9,7 @@ body {
   min-height: 100vh;
   width: 100%;
   overflow: hidden;
-  background-color: #36362d;
+  background-color: #939378;
   color: aliceblue;
 }
 
@@ -47,7 +47,7 @@ h2 {
 .about {
   text-align: center;
   position: fixed;
-  z-index: 0;
+  z-index: 1;
 }
 
 h3 {
