--- a/node_server/public/style.css
+++ b/node_server/public/style.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   overflow: hidden;
   background-color: #939378;
+  font-family: "Bungee Spice", cursive;
   color: aliceblue;
 }
 
@@ -18,6 +19,9 @@ h1 {
   padding-top: 40px;
   position: relative;
   z-index: 1;
+}
+#index_h1 {
+  font-family: "Bungee Spice", cursive;
 }
 
 /* .col {
@@ -36,8 +40,11 @@ h1 {
 .btn-row {
   display: flex;
   justify-content: space-evenly;
+  font-family: "Oswald", sans-serif;
 }
-
+.btn {
+  font-family: "Oswald", sans-serif;
+}
 .table-row {
   display: table-row;
 }
@@ -52,6 +59,10 @@ h2 {
   z-index: 1;
 }
 
+#back {
+  position: relative;
+  z-index: 2;
+}
 h3 {
   padding-top: 30px;
 }
@@ -63,9 +74,9 @@ h3 {
   /* display: none; */
 }
 
-.rank-container {
+/* .rank-container {
   background-color: red;
-}
+} */
 
 #measureSize {
   position: fixed;
@@ -80,4 +91,9 @@ canvas[data-engine*="three.js"] {
 button {
   position: relative;
   z-index: 1;
+  font-family: "Oswald", sans-serif;
+}
+
+p {
+  font-family: "Oswald", sans-serif;
 }
