--- a/node_server/public/style.css
+++ b/node_server/public/style.css
@@ -10,7 +10,8 @@ body {
   width: 100%;
   overflow: hidden;
   background-color: #939378;
-  font-family: "Bungee Spice", cursive;
+  /* font-family: "Bungee Spice", cursive; */
+  font-family: "Righteous", cursive;
   color: aliceblue;
 }
 
@@ -39,7 +40,7 @@ h1 {
   font-family: "Oswald", sans-serif;
 }
 .btn {
-  font-family: "Oswald", sans-serif;
+  font-family: "Righteous", cursive;
 }
 .table-row {
   display: table-row;
@@ -87,7 +88,7 @@ canvas[data-engine*="three.js"] {
 button {
   position: relative;
   z-index: 1;
-  font-family: "Oswald", sans-serif;
+  font-family: "Righteous", cursive;
 }
 
 p {
@@ -100,12 +101,13 @@ p {
 }
 
 .listen {
+  font-family: "Righteous", cursive;
   background-color: #515751;
+  max-width: 50vw;
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
 
   font-size: 20px;
   margin: 4px 0;
@@ -113,17 +115,18 @@ p {
   width: 100vw;
 
   position: fixed;
-  bottom: 3.6rem;
-  left: 0;
+  bottom: 3.75rem;
+  margin-left: 99px;
+  margin-right: 99px;
 
-  z-index: 2;
+  /* z-index: 100; */
 }
 
 #timer {
-  /* position: fixed;
-  top: 2rem; */
+  position: fixed;
+  top: 2.5rem;
 
-  font-size: 24px;
+  font-size: 2rem;
   text-align: center;
   color: #fffef9;
   text-shadow: -4px 2px 2px rgba(54, 63, 49, 1);
@@ -133,17 +136,20 @@ p {
 
 #restart {
   text-align: center;
-  color: #4caf50;
+  color: #deffdf;
+  text-shadow: -4px 2px 2px rgba(54, 63, 49, 1);
+
+  font-size: 1.5rem;
 
   font-family: "Black Ops One";
 }
 
 #cup-counter {
   position: fixed;
-  top: 3rem;
-  right: 0.5rem;
+  top: 1.5rem;
+  right: 0.3rem;
   text-align: center;
-  font-size: 19px;
+  font-size: 1.8rem;
   color: #fffef9;
   text-shadow: -4px 2px 2px rgba(54, 63, 49, 1);
 
@@ -152,12 +158,14 @@ p {
 
 .matchStatus {
   text-align: center;
-  color: #4caf50;
-  font-size: 3rem;
+  color: #deffdf;
+  text-shadow: -4px 2px 2px rgba(54, 63, 49, 1);
+
+  font-size: 4rem;
 
   position: fixed;
 
-  bottom: 9rem;
+  bottom: 18rem;
 }
 
 button {
@@ -167,8 +175,10 @@ button {
 #match-note {
   font-size: 6rem;
   color: #4caf50;
+  text-shadow: -4px 2px 2px rgba(54, 63, 49, 1);
+
   position: fixed;
-  top: 13rem;
+  top: 17rem;
   text-align: center;
 
   opacity: 0;
@@ -183,7 +193,7 @@ button {
     opacity: 0;
   }
 
-  50% {
+  30% {
     opacity: 1;
   }
 
@@ -193,8 +203,8 @@ button {
 }
 
 .canvas-container {
-  display: flex;
-  justify-content: center;
+  position: fixed;
+  bottom: 8rem;
 
   z-index: 1;
 }
