fix the animation

--- a/node_server/public/style.css
+++ b/node_server/public/style.css
@@ -115,16 +115,19 @@ p {
   width: 100vw;
 
   position: fixed;
-  bottom: 3.75rem;
-  margin-left: 99px;
-  margin-right: 99px;
+  bottom: 10%;
+  margin-left: 25%;
+  margin-right: 25%;
+
+  display: "block";
 
   /* z-index: 100; */
 }
 
 #timer {
   position: fixed;
-  top: 2.5rem;
+  right: 30%;
+  top: 2rem;
 
   font-size: 2rem;
   text-align: center;
@@ -135,6 +138,10 @@ p {
 }
 
 #restart {
+  position: fixed;
+  top: 4rem;
+  right: 40%;
+
   text-align: center;
   color: #deffdf;
   text-shadow: -4px 2px 2px rgba(54, 63, 49, 1);
@@ -146,8 +153,8 @@ p {
 
 #cup-counter {
   position: fixed;
-  top: 1.7rem;
-  right: 4.2rem;
+  top: 1.85rem;
+  right: 0.3rem;
   text-align: center;
   font-size: 1.8rem;
   color: #fffef9;
@@ -211,7 +218,24 @@ button {
 
 #create {
   position: fixed;
-  top: 50%;
-  left: 49%;
-  width: 5rem;
+  top: 43%;
+  left: 39%;
+  width: 6rem;
+  height: 6rem;
+  opacity: 0;
+  border-radius: 100%;
+}
+
+.hz {
+  opacity: 0;
+}
+
+.notePlay {
+  opacity: 0;
+}
+
+.testing {
+  position: relative;
+  top: 6.25rem;
+  margin-left: 1rem;
 }
